--- a/templates/Feedback.html
+++ b/templates/Feedback.html
@@ -11,7 +11,7 @@
   <title>Feedback</title>
 </head>
 
-<body onload="onPageLoad()">
+<body>
   <header>
     <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container-fluid">
@@ -67,7 +67,7 @@
           </div>
           <!--Option-->
           <div class="col-75">
-            <select id="Tingkatan" onchange="onChangeBrand()">
+            <select id="Tingkatan">
               <option>-- Pilih tingkatan --</option>
               <option>SD</option>
               <option>SMP</option>
@@ -116,7 +116,7 @@
 
         <br>
         <div class="row">
-          <input onclick="saveToLocalstorage()" type="submit" value="Submit">
+          <input id="btnSubmit" type="button" value="Submit">
         </div>
       </form>
     </div>
@@ -203,7 +203,10 @@
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
 
-  <script>
+  <!-- MY SCRIPT -->
+  <script src="../static/js/script.js"></script>
+
+  <!-- <script>
     const brands = ["SD", "SMP", "SMA", "SMK"]
     const models = [
       { id: 1, brand: 'SD', model: '-- Pilih kelas --' },
@@ -301,7 +304,7 @@
       }
     }
 
-  </script>
+  </script> -->
 </body>
 
 </html>
