change color feedback button

--- a/templates/home.html
+++ b/templates/home.html
@@ -67,7 +67,7 @@
 
                         <!-- Button trigger modal -->
 
-                        <button type="button" class="btn btn-secondary" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-dark" data-bs-toggle="modal"
                             data-bs-target="#staticBackdrop">
                             Feedback
                         </button>
