--- a/templates/Berita_Utama.html
+++ b/templates/Berita_Utama.html
@@ -124,7 +124,7 @@
                         menghasilkan inovasi untuk menuju UnimalHebat, Unimal rumah Kita".[tmi]
                     </p>
 
-                    <a class="btn btn-primary" href="Blog.html" role="button">Kembali</a>
+                    <a class="btn btn-primary" href="blog" role="button">Kembali</a>
                 </div>
                 <a href="#" class="up-icon"><i class="fas fa-chevron-circle-up"></i></a>
             </div>
