--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -76,7 +76,7 @@
             <div class="col-sm-3">
                 <div class="card_mobil">
                     <div class="card">
-                        <img src="/static/images/animasi.jpg" alt="Marlina Sari">
+                        <img src="/static/images/us/marlina.jpg" alt="Marlina Sari">
                         <div class="card-body">
                             <h5 class="card-title">Marlina Sari</h5>
                             <p class="card-text">Mahasiswa</p>
@@ -89,9 +89,9 @@
             <div class="col-sm-3">
                 <div class="card_member">
                     <div class="card">
-                        <img src="/static/images/us/animasi.jpg" alt="Rodiatul Adawiyah Dalimunthe">
+                        <img src="/static/images/us/rodiatul.webp" alt="Rodiatul Adawiyah Dalimunthe">
                         <div class="card-body">
-                            <h5 class="card-title">Rodiatul Adawiyah Dalimunthe</h5>
+                            <h5 class="card-title">Rodiatul Adawiyah D.</h5>
                             <p class="card-text">Mahasiswa</p>
                             <p class="card-text">Prodi Teknik Informatika</p>
                             <p class="card-text">Sycamore class</p>
@@ -102,7 +102,7 @@
             <div class="col-sm-3">
                 <div class="card_member">
                     <div class="card">
-                        <img src="/static/images/us/animasi.jpg" alt="Roslaini">
+                        <img src="/static/images/us/ros.jpg" alt="Roslaini">
                         <div class="card-body">
                             <h5 class="card-title">Roslaini</h5>
                             <p class="card-text">Mahasiswa</p>
@@ -115,7 +115,7 @@
             <div class="col-sm-3">
                 <div class="card_member">
                     <div class="card">
-                        <img src="/static/images/us/animasi.jpg" alt="Violita Aditya Zahrah">
+                        <img src="/static/images/us/vio.jpeg" alt="Violita Aditya Zahrah">
                         <div class="card-body">
                             <h5 class="card-title">Violita Aditya Zahrah</h5>
                             <p class="card-text">Mahasiswa</p>
