--- a/templates/berita1.html
+++ b/templates/berita1.html
@@ -108,7 +108,7 @@
                         Yunizar. [ayi]
                     </p>
 
-                    <a class="btn btn-primary" href="Blog.html" role="button">Kembali</a>
+                    <a class="btn btn-primary" href="blog" role="button">Kembali</a>
                 </div>
             </div>
 
