--- a/templates/berita2.html
+++ b/templates/berita2.html
@@ -105,7 +105,7 @@
                         Unimal Nomor 2 Tahun 2020
                         dimana tujuannya adalah untuk mencegah terjadinya penyebaran covid-19.[ryn]
                     </p>
-                    <a class="btn btn-primary" href="Blog.html" role="button">Kembali</a>
+                    <a class="btn btn-primary" href="blog" role="button">Kembali</a>
                 </div>
                 <a href="#" class="up-icon"><i class="fas fa-chevron-circle-up"></i></a>
             </div>
