--- a/templates/berita3.html
+++ b/templates/berita3.html
@@ -101,7 +101,7 @@
 
 
 
-                    <a class="btn btn-primary" href="Blog.html" role="button">Kembali</a>
+                    <a class="btn btn-primary" href="blog" role="button">Kembali</a>
                 </div>
                 <a href="#" class="up-icon"><i class="fas fa-chevron-circle-up"></i></a>
             </div>
